# yandex_tracker_api_rust

./: .gitignore  Cargo.toml  ReadMe.md
src/: config.rs  lib.rs  main.rs  modules.rs
src/modules/: authorization.rs  task.rs
src/modules/authorization/: auth_error.rs  token_response.rs
src/modules/task/: error_response.rs  success_response.rs  task_api_client.rs  task_batch.rs  task_batch_error.rs  task_manager.rs
tests/: task_batch_test.rs
