[package]
name = "yandex_tracker_api_rust"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.61"
open = "5.1.4"
toml = "0.8.14"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
clap = { version = "4.5.9", features = ["derive"] }

[dev-dependencies]
yandex_tracker_api_rust = { path = "." }
tokio = { version = "1", features = ["full"] }
